--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Framework</title>
+    <title>ELIXIR - The Lifesaver for Tattoos</title>
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Source+Serif+Pro&display=swap" rel="stylesheet">
@@ -14,25 +14,20 @@
 </head>
 <body>
 
-    <header class="site-header">
-        <div class="site-id">
-            <a class="logomark" href="index.html"><img src="img/logo.png" alt="Site Name Logo" width="100" height="100"></a>
+    <header class="site-header toggle-nav sticky">
+        <div class="container">
+            <a class="logo" href="index.html"><img src="img /elixir logo.png" alt="Site Name Logo" width="80" height="80"></a>
              
             <h1 class="hide-visually"><a href="#">Personal Framework</a></h1>
         </div>
-        <nav class="site-nav" data-navstate="closed">
-            <h2 class="menu-button">
-                <span class="hide-visually">Menu</span>
-                <svg width="30" height="30"> 
-                    <title>Menu</title>
-                    <rect id="menubar-top" y="0" width="30" height="3"></rect>
-                    <rect id="menubar-middle" y="8" width="30" height="3"></rect>
-                    <rect id="menubar-bottom" y="16" width="30" height="3"></rect>
-                </svg>
-            </h2>
+        <nav class="site-nav">
+            <div class="hide-visually">Menu</div>
             <ul>
-                <li><a href="#index.html">Home</a></li>
-                <li><a href="#subpage.html">Subpage</a></li>
+                <li><a href="#section1">What is it?</a></li>
+                <li><a href="#section2">Products</a></li>
+                <li><a href="#section3">Reviews</a></li>
+                <li><a href="#section4">About Us</a></li>
+                <li><a href="#section5">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +36,7 @@
         <section class="hero animate-on-scroll">
             <div class="container">
                 <h1>The Elixir Kit</h1>
-                <p>This is a simple, single page website, built with SASS.</p>
+                <p>BOLD & VIBRANT</p>
                 <a href="#section1" class="button">What is the Elixir Kit?</a>
             </div>
         </section>
@@ -93,9 +88,11 @@
     <footer class="site-footer">
         <nav class="site-nav">
             <ul>
-                <li><a href="#section1">Section 1</a></li>
-                <li><a href="#section2">Section 2</a></li>
-                <li><a href="#section3">Section 3</a></li>
+                <li><a href="#section1">What is it?</a></li>
+                <li><a href="#section2">Products</a></li>
+                <li><a href="#section3">Reviews</a></li>
+                <li><a href="#section4">About Us</a></li>
+                <li><a href="#section5">Contact</a></li>
             </ul>
         </nav>
     </footer>
