--- a/index.html
+++ b/index.html
@@ -35,25 +35,38 @@
     <main class="site-main">
         <section class="hero animate-on-scroll">
             <div class="container">
-                <h1>The Elixir Kit</h1>
-                <p>BOLD & VIBRANT</p>
+                <img src="img /elixirgoldfoill.png" alt="tattoogoldfoil" width="400" height="400">
+                <h3>BOLD & VIBRANT</h3>
                 <a href="#section1" class="button">What is the Elixir Kit?</a>
-            </div>
-        </section>
-
-        <section id="section1" class="animate-on-scroll">
             <div class="container">
                 <div class="row">
-                    <div class="one-half">
-                        <img src="https://via.placeholder.com/1600x1200" alt="Placeholder">
-                    </div>
-                    <div class="one-half">
-                        <h3>Header 3</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum nisi assumenda corporis. Magni nisi cupiditate minus tempora voluptatibus consectetur dolores omnis, esse assumenda. Quidem, similique!</p>
-                        <a href="#" class="button">Button</a>
+                    <div class="s-character">
+                        <img src="img /tattoo image 4.png" alt="tattooimage" width="1000" height="1000">
+                    <div>
+                <div>
+            </div>
+        </section>
+        <section id="section1" class="animate-on-scroll">
+            <div class="container">
+                <div class="row stacked">
+                    <div class="one">
+                        <img src="img /whatisit.png" alt="Placeholder" width="750" height="750">
                     </div>
                 </div>
             </section>
+            <section id="section1" class="animate-on-scroll">
+                <div class="container">
+                    <div class="row">
+                        <div class="one-half">
+                            <img src="https://via.placeholder.com/1600x1200" alt="Placeholder">
+                        </div>
+                        <div class="one-half">
+                            <h3>Header 3</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum nisi assumenda corporis. Magni nisi cupiditate minus tempora voluptatibus consectetur dolores omnis, esse assumenda. Quidem, similique!</p>
+                            <a href="#" class="button">Button</a>
+                        </div>
+                    </div>
+                </section>
 
         <section id="section2" class="animate-on-scroll">
                 
