--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="one-half">
-                            <img src="https://via.placeholder.com/1600x1200" alt="Placeholder">
+                            <img src="img /elixir-soap.png" alt="Placeholder">
                         </div>
                         <div class="one-half">
-                            <h3>Header 3</h3>
+                            <h3>Elixir's Tattoo Healing Soap</h3>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum nisi assumenda corporis. Magni nisi cupiditate minus tempora voluptatibus consectetur dolores omnis, esse assumenda. Quidem, similique!</p>
-                            <a href="#" class="button">Button</a>
+                            <a href="#" class="button">More Info</a>
                         </div>
                     </div>
                 </section>
@@ -73,12 +73,12 @@
             <div class="container">
                 <div class="row swapped">
                     <div class="one-half">
-                        <img class="animate-scale-in" src="https://via.placeholder.com/1600x1200" alt="Placeholder">
+                        <img class="animate-scale-in" src="img /elixir-lotion.png" alt="Placeholder">
                     </div>
                     <div class="one-half animate-drop-in-with-delay">
-                        <h3>Header 3</h3>
+                        <h3>Elixir's Tattoo Healing Lotion</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum nisi assumenda corporis. Magni nisi cupiditate minus tempora voluptatibus consectetur dolores omnis, esse assumenda. Quidem, similique!</p>
-                        <a href="#" class="button">Button</a>
+                        <a href="#" class="button">More Info</a>
                     </div>
                 </div>
             
@@ -87,12 +87,12 @@
             <div class="container">
                 <div class="row stacked">
                     <div class="one-half animate-scale-in">
-                        <img src="https://via.placeholder.com/1600x1200" alt="Placeholder">
+                        <img src="img /elixir - bandages.png" alt="Placeholder">
                     </div>
                     <div class="one-half animate-slide-up">
-                        <h3>Header 3</h3>
+                        <h3>Elixir's Tattoo Healing Bandages</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum nisi assumenda corporis. Magni nisi cupiditate minus tempora voluptatibus consectetur dolores omnis, esse assumenda. Quidem, similique!</p>
-                        <a href="#" class="button">Button</a>
+                        <a href="#" class="button">More Info</a>
                     </div>
                 </div>
         </section>
