--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
         <section id="section" class="animate-on-scroll">
                 <div class="row stacked">
                     <div class="one">
-                        <img src="img /whatisit.png" alt="Placeholder" width="750" height="750">
+                        <img src="img /whatisit.png" alt="Placeholder" width="730" height="730">
                     </div>
                 </div>
-            </section>
+            <div class="s-character2">
+                    <img src="img /tattoo image 5.png" alt="tattooimage" >
+                <div>
+            </div>    
+        </section>
+
             <section id="products" class="animate-on-scroll">
                 <div class="container">
                     <div class="row">
