--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="row">
                     <div class="s-character">
-                        <img src="img /tattoo image 4.png" alt="tattooimage" width="1000" height="1000">
+                        <img src="img /tattoo image 4.png" alt="tattooimage" width="3000" height="3000">
                     <div>
                 <div>
             </div>
@@ -58,7 +58,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="one-half">
-                            <img src="img /elixir-soap.png" alt="Placeholder">
+                            <img src="img /elixir-soap.png" alt="Placeholder"width="350" height="350">
                         </div>
                         <div class="one-half">
                             <h3>Elixir's Tattoo Healing Soap</h3>
@@ -73,7 +73,7 @@
             <div class="container">
                 <div class="row swapped">
                     <div class="one-half">
-                        <img class="animate-scale-in" src="img /elixir-lotion.png" alt="Placeholder">
+                        <img class="animate-scale-in" src="img /elixir-lotion.png" alt="Placeholder" width="350" height="350">
                     </div>
                     <div class="one-half animate-drop-in-with-delay">
                         <h3>Elixir's Tattoo Healing Lotion</h3>
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="row stacked">
                     <div class="one-half animate-scale-in">
-                        <img src="img /elixir - bandages.png" alt="Placeholder">
+                        <img src="img /elixir - bandages.png" alt="Placeholder" width="350" height="350">
                     </div>
                     <div class="one-half animate-slide-up">
                         <h3>Elixir's Tattoo Healing Bandages</h3>
