--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3>BOLD & VIBRANT</h3>
                 <a href="#section1" class="button">What is the Elixir Kit?</a>
                     <div class="s-character">
-                        <img src="img /tattoo image 4.png" alt="tattooimage" width="1000" height="1000">
+                        <img src="img /tattoo image 4.png" alt="tattooimage" >
                     <div>
                 </div>
         </section>
@@ -59,7 +59,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="one-half">
-                            <img src="img /elixir-soap.png" alt="Placeholder">
+                            <img src="img /elixir-soap.png" alt="Placeholder"width="300" height="300">
                         </div>
                         <div class="one-half">
                             <div class="content-block">
@@ -115,14 +115,9 @@
         
         <section id="section4" class="animate-on-scroll">
             <div class="container">
-                <div class="row swapped">
-                    <div class="one-half">
-                        <img class="animate-scale-in" src="img /elixir-lotion.png" alt="Placeholder">
-                    </div>
-                    <div class="one-half animate-drop-in-with-delay">
-                        <h3>Elixir's Tattoo Healing Lotion</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum nisi assumenda corporis. Magni nisi cupiditate minus tempora voluptatibus consectetur dolores omnis, esse assumenda. Quidem, similique!</p>
-                        <a href="#" class="button">More Info</a>
+                <div class="row stacked">
+                    <div class="one">
+                        <img src="img /elixir-about.png" alt="Placeholder" width="650" height="650">
                     </div>
                 </div>
         </section>
@@ -130,8 +125,11 @@
             <div class="one-whole">
             <div class="centered-align">    
                 <div class="row stacked">
-                    <div class="one-half animate-scale-in">
-                        <img src="img /elixir - bandages.png" alt="Placeholder">
+                    <div class="contact-info">
+                        <div class="contact-content">
+                            <h3><span class="dark-color">Contact Info</span></h3>
+                            <h5><span class="color-yellow">Phone:</span> (203) 243-0789</h5>    
+                        <div>
                     </div>
                 </div>    
             </div>    
