--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="site-header">
         <div class="site-id">
             <a class="logo" href="index.html">
-                <img src="img /elixir logo.png" alt="Site Name Logo" width="80" height="80"></a>
+                <img src="img/elixirlogo.png" alt="Site Name Logo" width="80" height="80"></a>
             <h1 class="hide-visually"><a href="#">Personal Framework</a></h1>
         </div>
         <nav class="site-nav">
@@ -35,22 +35,22 @@
     <main class="site-main">
         <section class="hero animate-on-scroll">
             <div class="container">
-                <img src="img /elixirgoldfoill.png" alt="tattoogoldfoil" width="400" height="400">
+                <img src="img/elixirgoldfoill.png" alt="tattoogoldfoil" width="400" height="400">
                 <h3>BOLD & VIBRANT</h3>
                 <a href="#section1" class="button">What is the Elixir Kit?</a>
                     <div class="s-character">
-                        <img src="img /tattoo image 4.png" alt="tattooimage" >
+                        <img src="img/tattoo4.png" alt="tattooimage" >
                     <div>
                 </div>
         </section>
         <section id="section" class="animate-on-scroll">
                 <div class="row stacked">
                     <div class="one">
-                        <img src="img /whatisit.png" alt="Placeholder" width="730" height="730">
+                        <img src="img/whatisit.png" alt="Placeholder" width="730" height="730">
                     </div>
                 </div>
             <div class="s-character2">
-                    <img src="img /tattoo image 5.png" alt="tattooimage" >
+                    <img src="img/tattoo5.png" alt="tattooimage" >
                 <div>
             </div>    
         </section>
@@ -59,7 +59,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="one-half">
-                            <img src="img /elixir-soap.png" alt="Placeholder"width="300" height="300">
+                            <img src="img/elixir-soap.png" alt="Placeholder"width="300" height="300">
                         </div>
                         <div class="one-half">
                             <div class="content-block">
@@ -74,7 +74,7 @@
                 <div class="container">
                     <div class="row swapped">
                         <div class="one-half">
-                            <img class="animate-scale-in" src="img /elixir-lotion.png" alt="Placeholder" width="300" height="300">
+                            <img class="animate-scale-in" src="img/elixir-lotion.png" alt="Placeholder" width="300" height="300">
                         </div>
                         <div class="one-half animate-drop-in-with-delay">
                             <div class="content-block">
@@ -89,7 +89,7 @@
                 <div class="container">
                     <div class="row stacked">
                         <div class="one-half animate-scale-in">
-                            <img src="img /elixir - bandages.png" alt="Placeholder" width="300" height="300">
+                            <img src="img/elixirbandages.png" alt="Placeholder" width="300" height="300">
                         </div>
                         <div class="one-half animate-slide-up">
                             <div class="content-block">
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="row stacked">
                     <div class="one">
-                        <img src="img /elixir-about.png" alt="Placeholder" width="650" height="650">
+                        <img src="img/elixir-about.png" alt="Placeholder" width="650" height="650">
                     </div>
                 </div>
         </section>
