--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="#section1">What is it?</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#section3">Reviews</a></li>
+                <li><a href="#review">Reviews</a></li>
                 <li><a href="#section4">About Us</a></li>
                 <li><a href="#section5">Contact</a></li>
             </ul>
@@ -43,7 +43,7 @@
                     <div>
                 </div>
         </section>
-        <section id="section" class="animate-on-scroll">
+        <section id="section1" class="animate-on-scroll">
                 <div class="row stacked">
                     <div class="one">
                         <img src="img/whatisit.png" alt="Placeholder" width="730" height="730">
@@ -65,7 +65,7 @@
                             <div class="content-block">
                             <h3>Elixir's Tattoo Healing Soap</h3>
                             <p>The perfect Anti-Bacterial Soap for your tattoos.</p>
-                            <a href="#" class="button">More Info</a>
+                            <a class="button">More Info</a>
                         <div>
                     <div>
                 </div>
@@ -80,7 +80,7 @@
                             <div class="content-block">
                                 <h3>Elixir's Tattoo Healing Lotion</h3>
                                 <p>The skin-protectant lotion to keep your tattoos from drying and cracking.</p>
-                                <a href="#" class="button">More Info</a>
+                                <a class="button">More Info</a>
                             <div>
                         <div> 
                     <div>
@@ -95,23 +95,37 @@
                             <div class="content-block">
                             <h3>Elixir's Tattoo Healing Bandages</h3>
                             <p>These water-proof bandages are a life-saver when you want to protect your tattoos from unwanted germs.</p>
-                            <a href="#" class="button">More Info</a>
+                            <a class="button">More Info</a>
                         <div>
                     <div>
             </section>
-            <section id="review" class="animate-on-scroll">
-                <div class="column one">
-                    <div class="row stacked">
-                        <div class="one-half animate-scale-in">
-                            <img src="" alt="Placeholder"> 
-                         </div>
-                        <div class="column one-half animate-slide-up">
-                            <h3 class="section-title">Reviews</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum nisi assumenda corporis. Magni nisi cupiditate minus tempora voluptatibus consectetur dolores omnis, esse assumenda. Quidem, similique!</p>
-                            <a href="#" class="button">More Info</a>
+        <section id="review" class="animate-on-scroll">
+                <div class="row stacked">
+            </div>  
+            <div class="swiper-container">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="stories-person">
+                                <img class="story-img" src="img/review01.png" alt="" srcset="">
+                            </div>
                         </div>
-                    </div> 
-            </section>  
+                        <div class="swiper-slide">
+                            <div class="stories-person">
+                                <img src="img/review02.png" alt="" srcset="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="stories-person">
+                                <img src="img/review03.png" alt="" srcset="">
+                            </div>
+                        </div>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </div>
+        </section>  
         
         <section id="section4" class="animate-on-scroll">
             <div class="container">
@@ -122,22 +136,19 @@
                 </div>
         </section>
         <section id="section5" class="animate-on-scroll">
+            <div class="container">
+                <img src="img/Group 14.png" alt="tattoogoldfoil" width="550" height="550">
             <div class="one-whole">
             <div class="centered-align">    
                 <div class="row stacked">
-                    <div class="contact-info">
-                        <div class="contact-content">
-                            <h3><span class="dark-color">Contact Info</span></h3>
-                            <h5><span class="color-yellow">Phone:</span> (203) 243-0789</h5>    
-                        <div>
-                    </div>
-                </div>    
-            </div>    
-        </section>
-    
+                <div class="contact-info">
+                    <div class="contact-content">
+                        <h3><span class="dark-color">Contact Info</span></h3>
+                        <h5><span class="color-yellow">Phone:</span> (203) 243-0789</h5>    
+                    <div>     
+            </div>              
+         </section>
     </main>
-
-
     <footer class="site-footer">
         <nav class="site-nav">
             <ul>
